SPKPRODUKT-32509: [release] Krever nå java 25, legger til implementasjon av scanLeft og slidingWindow som gatherer