@@ -1,9 +1,8 @@
 package no.spk.panda.functional;
 
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.IntStream.range;
-import static no.spk.panda.functional.Collectors.slidingWindow;
+import static no.spk.panda.functional.Gatherers.slidingWindow;
 import static no.spk.panda.functional.Tuple.tuple;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatCode;
@@ -15,7 +14,7 @@ import org.assertj.core.api.ListAssert;
 import org.junit.jupiter.api.Test;
 
 @SuppressWarnings({"unchecked", "RedundantSuppression"})
-class SlidingWindowCollectorTest {
+class SlidingWindowGathererTest {
     @Test
     void skal_produsere_vinduene_sekvensielt_og_parvis() {
         assertSlidingWindow(
@@ -44,28 +43,47 @@ class SlidingWindowCollectorTest {
     }
 
     @Test
-    void skal_feile_ved_bruk_av_slidingWindow_stream_med_1_element_for_å_sikre_at_en_oppdager_tap_av_informasjon_som_følge_av_feil_antagelsar() {
+    void skal_feile_ved_bruk_av_slidingWindow_på_stream_med_1_element_for_å_sikre_at_en_oppdager_tap_av_informasjon_som_følge_av_feil_antagelsar() {
         //noinspection ResultOfMethodCallIgnored
         assertThatCode(
-                () -> Stream.of(1).collect(slidingWindow())
+                () -> Stream.of(1).gather(slidingWindow()).toList()
         )
-                .as("Forventet feil fra Stream.of(<kun 1 element>).collect(slidingWindow())")
+                .as("Forventet feil fra Stream.of(<kun 1 element>).gather(slidingWindow()).toList()")
                 .isInstanceOf(UnsupportedOperationException.class)
                 .hasMessageContaining("slidingWindow er ikke støttet for en Stream som kun inneholder 1 element.");
     }
 
-    @SuppressWarnings("ResultOfMethodCallIgnored")
     @Test
-    void skal_feile_ved_parallellitet() {
-        assertThatCode(
-                () -> range(0, 100000)
+    void skal_produsere_samme_resultat_ved_parallellitet() {
+        assertThat(
+                range(0, 100000)
                         .boxed()
                         .parallel()
-                        .collect(slidingWindow())
+                        .gather(slidingWindow())
+                        .toList()
         )
-                .as("feil ved bruk på parallell-stream")
-                .isInstanceOf(UnsupportedOperationException.class)
-                .hasMessageContaining("Støttar ikkje parallellitet i slidingWindow");
+                .as("parallell stream skal gi samme resultat som sekvensiell stream")
+                .isEqualTo(
+                        range(0, 100000)
+                                .boxed()
+                                .gather(slidingWindow())
+                                .toList()
+                );
+    }
+
+    @Test
+    void skal_støtte_kortslutning_nedstrøms() {
+        assertThat(
+                Stream.of(1, 2, 3, 4, 5)
+                        .gather(slidingWindow())
+                        .limit(2)
+                        .toList()
+        )
+                .as("(1, 2, 3, 4, 5).gather(slidingWindow()).limit(2)")
+                .containsExactly(
+                        tuple(1, 2),
+                        tuple(2, 3)
+                );
     }
 
     private ListAssert<Tuple2<Integer, Integer>> assertSlidingWindow(final Stream<Integer> input) {
@@ -73,11 +91,11 @@ class SlidingWindowCollectorTest {
         return assertThat(
                 buffer
                         .stream()
-                        .collect(slidingWindow())
-                        .collect(toList())
+                        .gather(slidingWindow())
+                        .toList()
         )
                 .as(
-                        "(%s).collect(slidingWindow())",
+                        "(%s).gather(slidingWindow())",
                         buffer.stream().map(Object::toString).collect(joining(", "))
                 );
     }
